Better reponsive on mobile, fixed DATABASE Url for HTTPS

--- a/css/yugioh_sky.css
+++ b/css/yugioh_sky.css
@@ -100,7 +100,7 @@ hr {
     }
 
     select {
-        margin-left: 40px;
+        margin-left: 80px;
     }
 
     .sidebar legend, .sidebar h4, .sidebar label {
